Organised files and finished Ring Buffer

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Debug Reader",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/Debug/reader",
+            "program": "${workspaceFolder}/Debug/readerQueue",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
